[package]
name = "rust2py"
version = "0.1.0"
authors = ["Christian Tabedzki <tabedzki@seas.upenn.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "rust2py"
crate-type = ["cdylib"]

[dependencies]
csv = "1.1.3"
itertools = "0.9.0"
rayon = "1.5.0"
rustfft = "4.0.0"
realfft = "^0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[dependencies.serde]
version = "1.0"
features = ["derive"]